0.7.6
- Added Set-RemotePSRemoting to the Backdoors directory.
0.7.5
- Added Set-RemoteWMI.ps1 to Backdoors directory.
- Added download-exec persistence to Add-Persistence.
- Bug fixes in Add-Persistence
- Invoke-SessionGopher no longer needs password as a parameter.
- Minor changes in help section of Invoke-PowerShellWMI
- Modified Invoke-PowerShellWMI to allow execution of commands and scripts non-interactively.
- Bug fixes in Out-Word.
- Added a bit of DDE payload hiding in Out-Word.
- Added DDE payloads to Out-Word.
0.7.4
- Added Invoke-SessionGopher.ps1 by Brandon Arvanaghi with some usability modifications to the Gather directory. 
0.7.3
- Updated mimikatz dll in Invoke-Mimikatz.ps1 to 2.1.1
- Updated Invoke-AmsiBypass to add another AMSI bypass by Matt Graeber. 
- Bug fixes in Copy-VSS and Out-SCT. 
- Minor improvements to Out-ShortCut. 
 
0.7.2
- Added Invoke-PowershellTcpOnelineBind to the Shells directory. 
0.7.1
- Added Invoke-AmsiBypass to the Bypass directory.
0.7.0
- Added Invoke-SSIDExfil to the Gather directory. 
- Gupt-Backdoor can now receive commands from SSID names on targets having PowerShellv3 and above.
 - Added ConverTo-ROT13 to the Utility directory.
0.6.9
- Get-PassHashes now uses Reflection. Thanks to Zer1t0 on GitHub.
- Added Invoke-Mimikittenz by Jamieson O'Reilly
0.6.8
- Added Out-SCF in the Client directory.
0.6.7
- Added Out-JS.ps1 in the Client directory.
- Added Out-SCT.ps1 in the Client directory.
- Added Invoke-JSRatRegsvr.ps1 in the Shells directory.
- Added Out-RundllCommand in the Execution directory.
0.6.6
- Added Invoke-JSRatRundll in the Shells directory.
0.6.5
- Updated Out-Word, Out-Excel, Out-HTA and Out-CHM. Now, scripts can directly be used as a payload.
- Updated Out-Word and Out-Excel. If a new document is now generated it tries to trick the target in enabling macros.
- Out-HTA uses inline VBScript now. A separate VBScirpt is not generated anymore.
0.6.4
- Added ActiveDirecotry directory.